package file updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "applewebsite",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "script.js",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
